--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl-Critic-Bangs
 
-NEXT
-        First version, released on an unsuspecting world.
+0.20    Fri Jul 14 22:36:09 CDT 2006
+        First real working version that you'd want to install.
+
 
