--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl-Critic-Bangs
 
+
+1.04    Sat Apr 17 11:13:42 CDT 2010
+====================================
+[FIXED]
+Fixed a problem with dereferencing a node in ProhibitRefProtoOrProto.
+Thanks to Mike Hind.
+
+
 1.02    Sat Mar  7 14:40:38 CST 2009
 ====================================
 No new features.
