--- a/Changes
+++ b/Changes
@@ -1,5 +1,22 @@
 Revision history for Perl-Critic-Bangs
 
+1.07_01
+====================================
+As of 1.07_01, Perl::Critic::Bangs is released under Artistic License 2.0,
+rather than dual-licensed with the GPL.
+
+[ENHANCEMENTS]
+Added a new policy, ProhibitBitwiseOperators.  Usually when you see
+a bitwise operator like | or & in a Perl program, it's a mistake that
+should have been || or &&.  It also checks for ^ and ~ as bitwise ops.
+Thanks to Mike O'Regan.
+
+[FIXES]
+Remove use of Perl::Critic::Utils::PPIRegexp, which has been removed
+from the Perl-Critic distribution, with calls to native PPI methods. This
+allows P::C::Bangs to install when using perl 5.14.  Thanks, Elliot Shank.
+
+
 1.06    Sun May 23 00:56:49 CDT 2010
 ====================================
 [ENHANCEMENTS]
