--- a/Changes
+++ b/Changes
@@ -1,6 +1,14 @@
 Revision history for Perl-Critic-Bangs
 
-1.07_01
+1.07_02 Tue May 17 11:06:41 CDT 2011
+====================================
+[ENHANCEMENTS]
+The list of bitwise operators prohibited is now:
+
+    & | ^ ~ &= |= ^=
+
+
+1.07_01 Mon May 16 23:48:20 CDT 2011
 ====================================
 As of 1.07_01, Perl::Critic::Bangs is released under Artistic License 2.0,
 rather than dual-licensed with the GPL.
