Import of PETDANCE/Perl-Critic-Bangs-1.08 from CPAN.
gitpan-cpan-distribution: Perl-Critic-Bangs
gitpan-cpan-version:      1.08
gitpan-cpan-path:         PETDANCE/Perl-Critic-Bangs-1.08.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl-Critic-Bangs
 
+1.08    Mon Jun 20 11:56:49 CDT 2011
+====================================
+Official release, no changes from 1.07_02
+
+
 1.07_02 Tue May 17 11:06:41 CDT 2011
 ====================================
 [ENHANCEMENTS]
