--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Perl-Critic-Bangs
 
+1.10    Mon Aug 20 14:26:07 CDT 2012
+====================================
+[ENHANCEMENTS]
+Added ProhibitDebuggingModules.  Thanks to Mike Doherty for the code,
+and to Breno G. de Oliveira, Joel Berger and Jeffrey Thalhammer for
+helping with implementation details.
+
+
 1.08    Mon Jun 20 11:56:49 CDT 2011
 ====================================
 Official release, no changes from 1.07_02
