Import of PETDANCE/Perl-Critic-Bangs-1.11_01 from CPAN.
gitpan-cpan-distribution: Perl-Critic-Bangs
gitpan-cpan-version:      1.11_01
gitpan-cpan-path:         PETDANCE/Perl-Critic-Bangs-1.11_01.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,26 @@
 Revision history for Perl-Critic-Bangs
 
+1.11_01 Mon Jun 24 10:09:32 CDT 2013
+====================================
+[ENHANCEMENTS]
+The Bangs::ProhibitVagueNames and Bangs::ProhibitNumberedNames policies
+have been updated in much the same way:
+
+* They now check names of subroutines as well as variables.
+* Their checks are now case-insensitive.
+* They only check variables or subroutines that you declare.  They will
+no longer complain if you are forced to use someone else's poorly-named
+variable.
+
+NOTE: The functionality of checking subroutines is experimental.  If it
+causes too many problems, I may remove it, or make it its own policy.
+
+[DOCUMENTATION]
+Added more documentation about how ProhibitNumberedNames does its
+matching.  There was nothing in there that said that if "utf8" was an
+exception that "foo_utf8" would pass cleanly.
+
+
 1.10    Mon Aug 20 14:26:07 CDT 2012
 ====================================
 [ENHANCEMENTS]
