Import of PETDANCE/Perl-Critic-Bangs-1.11_02 from CPAN.
gitpan-cpan-distribution: Perl-Critic-Bangs
gitpan-cpan-version:      1.11_02
gitpan-cpan-path:         PETDANCE/Perl-Critic-Bangs-1.11_02.tar.gz
gitpan-cpan-author:       PETDANCE
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 Revision history for Perl-Critic-Bangs
 
+1.11_02 Sun Nov  3 00:52:18 CDT 2013
+====================================
+[ENHANCEMENTS]
+Added Bangs::ProhibitUselessTopic to warn against constructs like:
+
+    $_ =~ /foo/
+
+or
+    my $size = -s $_;
+
+where the $_ is unnecessary.
+
 1.11_01 Mon Jun 24 10:09:32 CDT 2013
 ====================================
 [ENHANCEMENTS]
